bppackaging/src/objects/In_Progress_VR__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>In Progress VRs</relationshipLabel>
        <relationshipName>In_Progress_VRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Header</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>In Progress VRs</relationshipLabel>
        <relationshipName>In_Progress_VRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>In Progress VR</label>
    <nameField>
        <displayFormat>IPVR-{00000000}</displayFormat>
        <label>In Progress VR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In Progress VRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>